"deleted some unnecesarry files and adjusted footer to prevent breakpoint on iphone 5"

--- a/css/custom.css
+++ b/css/custom.css
@@ -64,6 +64,9 @@ a:active {
     .headline{
     	margin: 10% 0 10% 0;
     }
+    .social {
+        width: 80%;
+    }
     .social-media-link{
     	margin: 5% 5% 5% 5%;
     }
@@ -79,8 +82,11 @@ a:active {
     .headline{
     	margin: 10% 0 10% 0;
     }
+    .social {
+        width: 80%;
+    }
     .social-media-link{
-    	margin: 10% 5% 10% 5%;
+    	margin: 8% 5% 8% 5%;
     }
 }
  
@@ -94,8 +100,11 @@ a:active {
     .headline{
     	margin: 15% 0 15% 0;
     }
+    .social {
+        width: 100%;
+    }
     .social-media-link{
-    	margin: 15% 5% 15% 5%;
+    	margin: 10% 5% 10% 5%;
     }
 }
 
@@ -122,7 +131,6 @@ header {
 	width: 100%;
 	color: #fff;
 	text-shadow: 0px 1.3px 1.8px black;
-    display: none;
 }
 
 #floaterBig, #floaterSmall {
@@ -169,7 +177,6 @@ footer > p{
 }
 .social{
 	text-align: center;
-	width: 80%;
 	margin: 0 auto 0 auto;
 	border:0;
 }
